...
                                    <constraint firstAttribute="width" constant="100" id="dtM-Sm-lDD"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <searchBar contentMode="redraw" placeholder="Search for dog breed..." translatesAutoresizingMaskIntoConstraints="NO" id="a4H-ON-MXD">
                                <rect key="frame" x="0.0" y="88" width="414" height="44"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="2zj-YV-eZS"/>
                                </constraints>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
...
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="L4b-6D-TFp"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Typical lifespan" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="9Oh-Y7-1cD">
                                <rect key="frame" x="20" y="489" width="374" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="oGw-rI-9WU"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="18"/>
                                <nil key="textColor"/>
...
